@@ -29,12 +29,12 @@ import com.fasterxml.jackson.databind.Module;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.ObjectWriter;
 import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.databind.ser.BeanPropertyFilter;
 import com.fasterxml.jackson.databind.ser.FilterProvider;
+import com.fasterxml.jackson.databind.ser.PropertyFilter;
 import com.fasterxml.jackson.databind.ser.impl.SimpleBeanPropertyFilter;
 import com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider;
 import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
-import com.fasterxml.jackson.datatype.jsr310.JSR310Module;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.google.common.collect.Sets;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -43,7 +43,7 @@ import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.charset.Charset;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashSet;
@@ -81,10 +81,6 @@ public class JSONSerialiser {
 
     public static final String STRICT_JSON = "palisade.serialiser.json.strict";
     public static final boolean STRICT_JSON_DEFAULT = true;
-    /**
-     * Charset for serialising data.
-     */
-    public static final Charset UTF8 = Charset.forName("UTF-8");
     private static final String STRICT_JSON_DEFAULT_STR = Boolean.toString(STRICT_JSON_DEFAULT);
 
     public static final String FILTER_FIELDS_BY_NAME = "filterFieldsByName";
@@ -170,8 +166,9 @@ public class JSONSerialiser {
         final String jsonSerialiserClass = System.getProperty(JSON_SERIALISER_CLASS_KEY, DEFAULT_SERIALISER_CLASS_NAME);
         final JSONSerialiser newInstance;
         try {
-            newInstance = Class.forName(jsonSerialiserClass).asSubclass(JSONSerialiser.class).newInstance();
-        } catch (final InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+            newInstance = Class.forName(jsonSerialiserClass).asSubclass(JSONSerialiser.class).getDeclaredConstructor().newInstance();
+        } catch (final InstantiationException | IllegalAccessException | InvocationTargetException
+                | NoSuchMethodException | ClassNotFoundException e) {
             throw new IllegalArgumentException("Property " + JSON_SERIALISER_CLASS_KEY + " must be set to a class that is a sub class of " + JSONSerialiser.class.getName() + ". This class is not valid: " + jsonSerialiserClass, e);
         }
 
@@ -181,8 +178,9 @@ public class JSONSerialiser {
         for (final String factoryClass : factoryClasses) {
             final JSONSerialiserModules factory;
             try {
-                factory = Class.forName(factoryClass).asSubclass(JSONSerialiserModules.class).newInstance();
-            } catch (final InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+                factory = Class.forName(factoryClass).asSubclass(JSONSerialiserModules.class).getDeclaredConstructor().newInstance();
+            } catch (final InstantiationException | IllegalAccessException | InvocationTargetException
+                    | NoSuchMethodException | ClassNotFoundException e) {
                 throw new IllegalArgumentException("Property " + JSON_SERIALISER_MODULES + " must be set to a csv of classes that are a sub class of " + JSONSerialiserModules.class.getName() + ". These classes are not valid: " + factoryClass, e);
             }
             final List<Module> modules = factory.getModules();
@@ -210,18 +208,17 @@ public class JSONSerialiser {
         // Allow unknown properties. This will help to avoid conflicts between Palisade versions.
         mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, STRICT_JSON_DEFAULT);
 
-        // Using the deprecated version for compatibility with older versions of jackson
-        mapper.registerModule(new JSR310Module());
-
         // Add JDK8 module for Optional
         mapper.registerModule(new Jdk8Module());
+        // Add JDK8 Time module
+        mapper.registerModule(new JavaTimeModule());
 
         mapper.registerModule(ResourceKeySerialiser.getModule());
 
         mapper.registerModule(UserIdKeySerialiser.getModule());
 
         // Use the 'setFilters' method so it is compatible with older versions of jackson
-        mapper.setFilters(getFilterProvider());
+        mapper.setFilterProvider(getFilterProvider());
 
         return mapper;
     }
@@ -230,11 +227,11 @@ public class JSONSerialiser {
         if (null == fieldsToExclude || fieldsToExclude.length == 0) {
             // Use the 'serializeAllExcept' method so it is compatible with older versions of jackson
             return new SimpleFilterProvider()
-                    .addFilter(FILTER_FIELDS_BY_NAME, (BeanPropertyFilter) SimpleBeanPropertyFilter.serializeAllExcept());
+                    .addFilter(FILTER_FIELDS_BY_NAME, (PropertyFilter) SimpleBeanPropertyFilter.serializeAllExcept());
         }
 
         return new SimpleFilterProvider()
-                .addFilter(FILTER_FIELDS_BY_NAME, (BeanPropertyFilter) SimpleBeanPropertyFilter.serializeAllExcept(fieldsToExclude));
+                .addFilter(FILTER_FIELDS_BY_NAME, (PropertyFilter) SimpleBeanPropertyFilter.serializeAllExcept(fieldsToExclude));
     }
 
     /**
